--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 		section h2   { width: 100%; }
 		section div  { position: relative; display: flex; flex-wrap: wrap; align-content: flex-start;
 		               width: 18.5rem; min-height: 2rem; margin-bottom: 1em; padding: .4em .8em;
-		               border: 1px solid #d1d5da; border-radius: 3px; }
-		section span { position: absolute; right: 4px; bottom: 0; }
+		               border: 1px solid #d1d5da; border-radius: 3px;
+		               padding-bottom: 2em; }
+		section span { position: absolute; bottom: 0; width: 100%; padding: 0 .8em;
+		               margin-left: -.8em; margin-right: 0; text-align: right; background-color: #eee; }
 		@media (max-width: 60em) { section div { width: 45%;  } }
 		@media (max-width: 40em) { section div { width: 100%; } }
 
@@ -34,7 +36,7 @@
 	<h1>zGoat</h1>
 
 	<div class="page">
-		<p>zgo.at contains my Go packages.</p>
+		<p style="text-align: center">zgo.at contains my Go packages.</p>
 
 		<p class="intro-links">
 			<a href="https://github.com/arp242">github.com/arp242</a>
@@ -46,228 +48,228 @@
 <h2>Applications</h2>
 <div>
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
-<code><a href='https://godocs.io/zgo.at/goatcounter/v2'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>☆ 2423</span>
+<span>v2.2.3 │ ★ 2423</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
-<code><a href='https://godocs.io/zgo.at/uni/v2'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>☆ 688</span>
+<span>v2.4.0 │ ★ 688</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
-<code><a href='https://godocs.io/zgo.at/singlepage'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/singlepage">godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
-<span>☆ 13</span>
+<span>  ★ 13</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/goimport">goimport</a></h3>
-<code><a href='https://godocs.io/zgo.at/goimport'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/goimport">godoc</a></code>
 <p>Add, remove, or replace imports in Go files.</p>
-<span>☆ 6</span>
+<span>v1.0.2 │ ★ 6</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/colorcount">colorcount</a></h3>
-<code><a href='https://godocs.io/zgo.at/colorcount'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/colorcount">godoc</a></code>
 <p>Display the colours used in a PNG image.</p>
-<span>☆ 4</span>
+<span>  ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
-<code><a href='https://godocs.io/zgo.at/gomodgraph'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/gomodgraph">godoc</a></code>
 <p>Go mod graph as a nicely indented graph.</p>
-<span>☆ 3</span>
+<span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/border">border</a></h3>
-<code><a href='https://godocs.io/zgo.at/border'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/border">godoc</a></code>
 <p>Simple commandline tool to add a border around PNG images.</p>
-<span>☆ 3</span>
+<span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gosodoff">gosodoff</a></h3>
-<code><a href='https://godocs.io/zgo.at/gosodoff'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/gosodoff">godoc</a></code>
 <p>Generate return statements in Go code.</p>
-<span>☆ 2</span>
+<span>  ★ 2</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
-<code><a href='https://godocs.io/zgo.at/sqlbench'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/sqlbench">godoc</a></code>
 <p>Run benchmarks on an SQL database.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/har">har</a></h3>
-<code><a href='https://godocs.io/zgo.at/har'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/har">godoc</a></code>
 <p>Read HAR ("HTTP Archive format") files.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/cantuse">cantuse</a></h3>
-<code><a href='https://godocs.io/zgo.at/cantuse'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/cantuse">godoc</a></code>
 <p>List browsers in which a feature *won't* work.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zcert">zcert</a></h3>
-<code><a href='https://godocs.io/zgo.at/zcert'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zcert">godoc</a></code>
 <p></p>
-<span>☆ 0</span>
+<span>  ★ 0</span>
 </div>
 </section>
 <section class="page">
 <h2>Libraries</h2>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
-<code><a href='https://godocs.io/zgo.at/zli'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>A Go library for writing CLI programs. It includes flag parsing, colour escape codes, and various helpful utility functions, and makes testing fairly easy.</p>
-<span>☆ 36</span>
+<span>  ★ 36</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
-<code><a href='https://godocs.io/zgo.at/zcache/v2'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
 <p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>☆ 24</span>
+<span>v2.0.0 │ ★ 24</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
-<code><a href='https://godocs.io/zgo.at/sconfig'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/sconfig">godoc</a></code>
 <p>A simple and functional configuration file parser.</p>
-<span>☆ 16</span>
+<span>v1.2.1 │ ★ 16</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
-<code><a href='https://godocs.io/zgo.at/isbot'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
 <p>Detect HTTP bots.</p>
-<span>☆ 10</span>
+<span>  ★ 10</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
-<code><a href='https://godocs.io/zgo.at/zhttp'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
 <p>Martin's HTTP package.</p>
-<span>☆ 7</span>
+<span>  ★ 7</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
-<code><a href='https://godocs.io/zgo.at/gadget'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
 <p>Get the browser and OS from the User-Agent header.</p>
-<span>☆ 7</span>
+<span>  ★ 7</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
-<code><a href='https://godocs.io/zgo.at/follow'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
 <p>Follow a file for changes; e.g. "tail -F".</p>
-<span>☆ 6</span>
+<span>  ★ 6</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
-<code><a href='https://godocs.io/zgo.at/zprof'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zprof">godoc</a></code>
 <p>Display runtime profiling data for Go programs over HTTP.</p>
-<span>☆ 5</span>
+<span>  ★ 5</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
-<code><a href='https://godocs.io/zgo.at/zdb'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
 <p>Zdb provides a nice API to interact with SQL databases.</p>
-<span>☆ 5</span>
+<span>  ★ 5</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
-<code><a href='https://godocs.io/zgo.at/blackmail'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/blackmail">godoc</a></code>
 <p>Send emails with a friendly API.</p>
-<span>☆ 5</span>
+<span>  ★ 5</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zlog">zgo.at/zlog</a></h3>
-<code><a href='https://godocs.io/zgo.at/zlog'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zlog">godoc</a></code>
 <p>Go logging library.</p>
-<span>☆ 3</span>
+<span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
-<code><a href='https://godocs.io/zgo.at/errors'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/errors">godoc</a></code>
 <p>Yet another errors package.</p>
-<span>☆ 3</span>
+<span>v1.1.0 │ ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
-<code><a href='https://godocs.io/zgo.at/acidtab'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
 <p>Print nicely aligned tables in the terminal.</p>
-<span>☆ 3</span>
+<span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
-<code><a href='https://godocs.io/zgo.at/tz'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/tz">godoc</a></code>
 <p>Go timezone convience library.</p>
-<span>☆ 2</span>
+<span>  ★ 2</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/hubhub">zgo.at/hubhub</a></h3>
-<code><a href='https://godocs.io/zgo.at/hubhub'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/hubhub">godoc</a></code>
 <p>Set of utility functions for working with the GitHub API.</p>
-<span>☆ 2</span>
+<span>  ★ 2</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
-<code><a href='https://godocs.io/zgo.at/zvalidate'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zvalidate">godoc</a></code>
 <p>Static validation for Go that returns parsed values.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zstripe">zgo.at/zstripe</a></h3>
-<code><a href='https://godocs.io/zgo.at/zstripe'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zstripe">godoc</a></code>
 <p>Set of utility functions for working with the Stripe API.</p>
-<span>☆ 1</span>
+<span>v1.1.0 │ ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
-<code><a href='https://godocs.io/zgo.at/z18n'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
 <p>I18n library.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
-<code><a href='https://godocs.io/zgo.at/ps'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/ps">godoc</a></code>
 <p>List system processes.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
-<code><a href='https://godocs.io/zgo.at/json'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/json">godoc</a></code>
 <p>Encoding/json with patches.</p>
-<span>☆ 1</span>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
-<code><a href='https://godocs.io/zgo.at/guru'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
 <p>Go errors with a Guru Meditation Number.</p>
-<span>☆ 1</span>
+<span>v1.1.0 │ ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
-<code><a href='https://godocs.io/zgo.at/ztpl'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/ztpl">godoc</a></code>
 <p></p>
-<span>☆ 0</span>
+<span>  ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
-<code><a href='https://godocs.io/zgo.at/zstd'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
 <p>Extensions to Go's stdlib.</p>
-<span>☆ 0</span>
+<span>  ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
-<code><a href='https://godocs.io/zgo.at/termtext'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
 <p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
-<span>☆ 0</span>
+<span>  ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
-<code><a href='https://godocs.io/zgo.at/termfo'>godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
 <p>A terminfo library.</p>
-<span>☆ 0</span>
+<span>  ★ 0</span>
 </div>
 </section>
 	<script data-goatcounter="https://zgoat.goatcounter.com/count"
