--- a/index.html
+++ b/index.html
@@ -443,13 +443,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.3.0 │ ★ 2753</span>
+<span>v2.4.1 │ ★ 2933</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.5.1 │ ★ 717</span>
+<span>v2.5.1 │ ★ 720</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
@@ -521,52 +521,52 @@ hr:before {
 <section class="page">
 <h2 id="libraries">Libraries</h2>
 <div>
+<h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
+<code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
+<p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
+<span>v2.1.0 │ ★ 44</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>A Go library for writing CLI programs. It includes flag parsing, colour escape codes, and various helpful utility functions, and makes testing fairly easy.</p>
-<span>  ★ 36</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
-<code><a href="https://godocs.io/zgo.at/zcache">godoc</a></code>
-<p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v1.2.0 │ ★ 36</span>
+<span>  ★ 37</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
 <code><a href="https://godocs.io/zgo.at/sconfig">godoc</a></code>
 <p>A simple and functional configuration file parser.</p>
-<span>v1.2.1 │ ★ 16</span>
+<span>v1.2.2 │ ★ 16</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
 <code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
 <p>Detect HTTP bots.</p>
-<span>v1.0.0 │ ★ 14</span>
+<span>v1.0.0 │ ★ 15</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
 <code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
 <p>Martin&#39;s HTTP package.</p>
-<span>  ★ 9</span>
+<span>  ★ 10</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
 <code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
 <p>Zdb provides a nice API to interact with SQL databases.</p>
-<span>  ★ 7</span>
+<span>  ★ 8</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
+<code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
+<p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
+<span>  ★ 8</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
 <code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
 <p>Get the browser and OS from the User-Agent header.</p>
 <span>v1.0.0 │ ★ 7</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
-<code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
-<p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
-<span>  ★ 7</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
@@ -584,25 +584,25 @@ hr:before {
 <h3><a href="https://github.com/arp242/zlog">zgo.at/zlog</a></h3>
 <code><a href="https://godocs.io/zgo.at/zlog">godoc</a></code>
 <p>Go logging library.</p>
+<span>  ★ 4</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
+<code><a href="https://godocs.io/zgo.at/zvalidate">godoc</a></code>
+<p>Static validation for Go that returns parsed values.</p>
 <span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
 <code><a href="https://godocs.io/zgo.at/errors">godoc</a></code>
 <p>Yet another errors package.</p>
-<span>v1.1.0 │ ★ 3</span>
+<span>v1.2.0 │ ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
 <code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
 <p>Print nicely aligned tables in the terminal.</p>
 <span>v1.0.0 │ ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
-<code><a href="https://godocs.io/zgo.at/zvalidate">godoc</a></code>
-<p>Static validation for Go that returns parsed values.</p>
-<span>  ★ 2</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
@@ -621,6 +621,12 @@ hr:before {
 <code><a href="https://godocs.io/zgo.at/zstripe">godoc</a></code>
 <p>Set of utility functions for working with the Stripe API.</p>
 <span>v1.1.0 │ ★ 1</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
+<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
+<p>Extensions to Go&#39;s stdlib.</p>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
@@ -650,12 +656,6 @@ hr:before {
 <h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
 <code><a href="https://godocs.io/zgo.at/ztpl">godoc</a></code>
 <p></p>
-<span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
-<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
-<p>Extensions to Go&#39;s stdlib.</p>
 <span>  ★ 0</span>
 </div>
 <div>
