--- a/index.html
+++ b/index.html
@@ -443,19 +443,19 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.4.1 │ ★ 3732</span>
+<span>v2.5.0 │ ★ 4105</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.6.0 │ ★ 750</span>
+<span>v2.6.0 │ ★ 769</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
 <code><a href="https://godocs.io/zgo.at/singlepage">godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
-<span>v1.0.0 │ ★ 20</span>
+<span>v1.0.0 │ ★ 26</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/goimport">goimport</a></h3>
@@ -472,13 +472,13 @@ hr:before {
 <div>
 <h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
 <code><a href="https://godocs.io/zgo.at/gomodgraph">godoc</a></code>
-<p>Go mod graph as a nicely indented graph.</p>
+<p>&#39;go mod graph&#39; as a nicely indented graph.</p>
 <span>v1.0.0 │ ★ 5</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/border">border</a></h3>
 <code><a href="https://godocs.io/zgo.at/border">godoc</a></code>
-<p>Simple commandline tool to add a border around PNG images.</p>
+<p>Commandline tool to add a border around PNG images.</p>
 <span>  ★ 4</span>
 </div>
 <div>
@@ -517,14 +517,20 @@ hr:before {
 <p>Generate documentation for Go APIs.</p>
 <span>  ★ 0</span>
 </div>
+<div>
+<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
+<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
+<p>Aggregate statistics for git repos.</p>
+<span>  ★ 0</span>
+</div>
 </section>
 <section class="page">
 <h2 id="libraries">Libraries</h2>
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
-<code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zcache">godoc</a></code>
 <p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v2.1.0 │ ★ 52</span>
+<span>v1.2.0 │ ★ 57</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
@@ -533,39 +539,39 @@ hr:before {
 <span>  ★ 37</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
+<code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
+<p>Detect HTTP bots.</p>
+<span>v1.0.0 │ ★ 19</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
+<code><a href="https://godocs.io/zgo.at/sconfig">godoc</a></code>
+<p>A simple and functional configuration file parser.</p>
+<span>v1.2.2 │ ★ 17</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
 <code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
 <p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
 <span>  ★ 17</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
-<code><a href="https://godocs.io/zgo.at/sconfig">godoc</a></code>
-<p>A simple and functional configuration file parser.</p>
-<span>v1.2.2 │ ★ 16</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
-<code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
-<p>Detect HTTP bots.</p>
-<span>v1.0.0 │ ★ 16</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
 <code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
 <p>Zdb provides a nice API to interact with SQL databases.</p>
+<span>  ★ 11</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
+<code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
+<p>Martin&#39;s HTTP package.</p>
 <span>  ★ 10</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
 <code><a href="https://godocs.io/zgo.at/zprof">godoc</a></code>
 <p>Display runtime profiling data for Go programs over HTTP.</p>
-<span>  ★ 9</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
-<code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
-<p>Martin&#39;s HTTP package.</p>
 <span>  ★ 9</span>
 </div>
 <div>
@@ -617,6 +623,12 @@ hr:before {
 <span>v1.0.0 │ ★ 3</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
+<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
+<p>I18n library.</p>
+<span>  ★ 2</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/hubhub">zgo.at/hubhub</a></h3>
 <code><a href="https://godocs.io/zgo.at/hubhub">godoc</a></code>
 <p>Set of utility functions for working with the GitHub API.</p>
@@ -629,28 +641,10 @@ hr:before {
 <span>v1.1.0 │ ★ 1</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
-<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
-<p>I18n library.</p>
-<span>  ★ 1</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
-<code><a href="https://godocs.io/zgo.at/ps">godoc</a></code>
-<p>List system processes.</p>
-<span>  ★ 1</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
 <code><a href="https://godocs.io/zgo.at/json">godoc</a></code>
 <p>Encoding/json with patches.</p>
 <span>  ★ 1</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
-<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
-<p>Go errors with a Guru Meditation Number.</p>
-<span>v1.1.0 │ ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
@@ -669,6 +663,18 @@ hr:before {
 <code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
 <p>A terminfo library.</p>
 <span>  ★ 0</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
+<code><a href="https://godocs.io/zgo.at/ps">godoc</a></code>
+<p>List system processes.</p>
+<span>  ★ 0</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
+<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
+<p>Go errors with a Guru Meditation Number.</p>
+<span>v1.1.0 │ ★ 0</span>
 </div>
 </section>
 	<script>// GoatCounter: https://www.goatcounter.com
@@ -817,28 +823,10 @@ hr:before {
 		var f = goatcounter.filter()
 		if (f)
 			return warn('not counting because of: ' + f)
-
 		var url = goatcounter.url(vars)
 		if (!url)
 			return warn('not counting because path callback returned null')
-
-		if (navigator.sendBeacon)
-			navigator.sendBeacon(url)
-		else {  // Fallback for (very) old browsers.
-			var img = document.createElement('img')
-			img.src = url
-			img.style.position = 'absolute'  // Affect layout less.
-			img.style.bottom = '0px'
-			img.style.width = '1px'
-			img.style.height = '1px'
-			img.loading = 'eager'
-			img.setAttribute('alt', '')
-			img.setAttribute('aria-hidden', 'true')
-
-			var rm = function() { if (img && img.parentNode) img.parentNode.removeChild(img) }
-			img.addEventListener('load', rm, false)
-			document.body.appendChild(img)
-		}
+		navigator.sendBeacon(url)
 	}
 
 	// Get a query parameter.
